Fix text alignment in code samples

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -125,6 +125,7 @@ pre {
   border-top: 1px solid rgba(255, 255, 255, .1);
   border-bottom: 1px solid rgba(255, 255, 255, .1);
   position: relative;
+  text-align: initial;
 
   + pre {
     border-top: 0;
